--- a/root/css/main.css
+++ b/root/css/main.css
@@ -84,6 +84,8 @@ html {
           transform: translateY(-100%) scale(1.2);
   -webkit-animation: clear 0.5s 1s forwards;
           animation: clear 0.5s 1s forwards;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
 .home .btn--contact:hover {
