--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -48,6 +48,7 @@
     opacity: 0;
     transform: translateY(-100%) scale(1.2);
     animation: clear 0.5s 1s forwards;
+    @include transition-ease;
     &--contact {
       &:hover {
         color: $secondary-color;
