test safari compatibility

--- a/root/css/main.css
+++ b/root/css/main.css
@@ -168,7 +168,7 @@ html {
   bottom: 0;
   left: 0;
   right: 0;
-  background: radial-gradient(circle at 13.5% 0, transparent 36px, #d3a500 37px);
+  background: radial-gradient(circle at calc(min(13.7%, 55px)) 0, transparent 36px, #d3a500 37px);
   -webkit-transition: cubic-bezier(0.57, 0.23, 0.08, 0.96) 0.45s;
   transition: cubic-bezier(0.57, 0.23, 0.08, 0.96) 0.45s;
 }
