--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Kirang+Haerang&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Castoro&family=Oswald&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Castoro&family=Oswald&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
 /* GENERAL STYLE
 ------------------------------ */
 $primary-color: #272727;
@@ -10,10 +10,15 @@ $yellow: #ffc907;
 $red: #ff0000;
 $green: #00ff00;
 $light-color: hsl(0, 0%, 100%);
-// $body-font: ;
+$grey: #262626;
+$red: #f79f1f;
+$blue: #12cbc4;
+$cian: #ed4c67;
+$green: #a3cb38;
 $project-font: "Kirang Haerang", cursive;
-$ff-detials-2: 'Oswald', sans-serif;
-$ff-contact: 'Indie Flower', cursive;
+$ff-detials-2: "Oswald", sans-serif;
+$ff-contact: "Indie Flower", cursive;
+
 @mixin vendor-prefix($name, $value...) {
   @each $vendor in ("-webkit-", "-moz-", "-ms-", "-o-", "") {
     #{$vendo}-#{$name}: #{$value};
@@ -167,6 +172,50 @@ html {
     }
     to {
       opacity: 1;
+    }
+  }
+}
+@mixin animate {
+  @keyframes animate {
+    0% {
+      width: 80px;
+      height: 80px;
+    }
+    10% {
+      width: 80px;
+      height: 80px;
+    }
+    50% {
+      width: 120px;
+      height: 120px;
+    }
+    90% {
+      width: 80px;
+      height: 80px;
+    }
+    100% {
+      width: 80px;
+      height: 80px;
+    }
+  }
+}
+
+@mixin rotate {
+  @keyframes rotate {
+    0% {
+      transform: rotate(0deg);
+    }
+    10% {
+      transform: rotate(0deg);
+    }
+    60% {
+      transform: rotate(90deg);
+    }
+    90% {
+      transform: rotate(90deg);
+    }
+    100% {
+      transform: rotate(90deg);
     }
   }
 }
