--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -10,19 +10,21 @@
     -45deg,
     rgba(255, 201, 7, 0.8),
     rgba(22, 141, 226, 0.8)
-  );
-  background-size: 200% 200%;
-  animation: flow-diognal 4s ease-in-out infinite;
-
-  h2:first-of-type {
-    font-size: 1em;
-    margin-block-end: 1rem;
-  }
-  h2:last-of-type {
-    font-size: 1.2em;
-  }
-
-  &__name {
+    );
+    background-size: 200% 200%;
+    animation: flow-diognal 4s ease-in-out infinite;
+    
+    h2:first-of-type {
+      font-family: $ff-contact;
+      font-size: 1em;
+      margin-block-end: 1rem;
+    }
+    h2:last-of-type {
+      font-size: 1.2em;
+    }
+    
+    &__name {
+    font-family: $ff-contact;
     font-size: 3.5rem;
     margin-bottom: 1rem;
     padding-bottom: 1rem;
