--- a/scss/_project-details.scss
+++ b/scss/_project-details.scss
@@ -6,27 +6,43 @@
 .menu {
   position: relative !important;
   padding: 0;
-  //   background: $yellow;
   width: 100%;
-  height: 10%;
-  &__crumbs {
-    padding: 5px;
-    position: fixed;
-    right: 2%;
-    top: 5%;
+  height: 15%;
+  overflow: hidden;
+  &__back {
+    font-family: $project-font;
+    font-size: clamp(2vw, 2rem, 5vw);
+    position: absolute;
+    left: 3%;
+    top: 50%;
+    transform: translateY(-50%);
     cursor: pointer;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 3px;
-    z-index: 1;
-    transition: all 0.5s;
-    &:hover {
-      gap: 5px;
+    white-space: nowrap;
+    @include transition-ease;
+    &:after {
+      content: 'Go back';
+      position: absolute;
+      left: 0;
+      bottom: -2vw;
+      font-size: 1rem;
+      opacity: 0;
+      transform: translateY(10px);
+      @include transition-ease;
     }
-    span {
-      inline-size: 7px;
-      block-size: 7px;
-      background: $light-color;
+    &:hover {
+      color: $light-color;
+      background: lighten($color: $primary-color, $amount: 20%);
+      border-radius: 50%;
+      &::after {
+        animation: clear 0.5s forwards;
+      }
+      i {
+        color: $primary-color;
+      }
+    }
+    i {
+      color: $yellow;
+      padding: 5px 7px;
     }
   }
 }
