--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -66,6 +66,40 @@
     overflow: hidden;
     cursor: pointer;
 
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 100%;
+      left: 0;
+      background: linear-gradient(
+        to bottom rgba($primary-color, 0),
+        rgba($primary-color, 0.9)
+      );
+      background-size: cover;
+      background-position: 100% 100%;
+      transition: all 0.5s ease;
+    }
+
+    &:hover {
+      &::before {
+        bottom: 0;
+      }
+      .projects__btn {
+        transform: translate(-50%, 50%) scaleY(1);
+      }
+    }
+
+    // Class for browser which doesn't support hover on mobile
+    .click {
+      &::before {
+        bottom: 0;
+      }
+      .projects__btn {
+        transform: translate(-50%, 50%) scaleY(1);
+      }
+    }
     &__header {
       position: relative;
       z-index: 1;
@@ -106,37 +140,6 @@
       block-size: 100%;
       position: relative;
       z-index: -1;
-    }
-
-    &::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 100%;
-      left: 0;
-      // background: linear-gradient(
-      //   0deg,
-      //   rgba($primary-color, 0) 0,
-      //   rgba($primary-color, 0.9) 80%
-      // );
-      background: linear-gradient(
-        to bottom rgba($primary-color, 0),
-        rgba($primary-color, 0.9)
-        );
-      background-size: cover;
-      background-position: 100% 100%;
-      transition: all 0.5s ease;
-    }
-
-    &:hover {
-      &::before {
-        bottom: 0;
-      }
-      .projects__btn {
-        // bottom: 50%;
-        transform: translate(-50%, 50%) scaleY(1);
-      }
     }
   }
 
