--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -10,28 +10,29 @@
     -45deg,
     rgba(255, 201, 7, 0.8),
     rgba(22, 141, 226, 0.8)
-    );
-    background-size: 200% 200%;
-    animation: flow-diognal 4s ease-in-out infinite;
-    
-    h2:first-of-type {
-      font-family: $ff-contact;
-      font-size: 1em;
-      margin-block-end: 1rem;
-    }
-    h2:last-of-type {
-      font-size: 1.2em;
-    }
-    
-    &__name {
+  );
+  background-size: 200% 200%;
+  animation: flow-diognal 4s ease-in-out infinite;
+
+  h2:first-of-type {
+    color: lighten($color: $primary-color, $amount: 60%);
     font-family: $ff-contact;
-    font-size: 3.5rem;
+    font-size: 1em;
+    margin-block-end: 1rem;
+  }
+  h2:last-of-type {
+    font-size: clamp(2vw, 1.2em, 5vw);
+  }
+
+  &__name {
+    font-family: $ff-contact;
+    font-size: clamp(5vw, 3.5rem, 12vw);
     margin-bottom: 1rem;
     padding-bottom: 1rem;
     border-bottom: 2px solid set-text-color($primary-color);
 
     &--last {
-      color: $secondary-color;
+      color: darken($secondary-color, 10%);
       font-weight: 700;
     }
   }
@@ -41,7 +42,7 @@
     margin: auto;
     inline-size: 50%;
     font-family: $ff-detials-2;
-    margin-block-start: 7rem;
+    margin-block-start: clamp(5vh, 7rem, 10vh);
     cursor: pointer;
     font-size: 0.8rem;
     padding: 0.5rem 1rem;
